# GoIT_Hw7

clean-folder/: README.md  pyproject.toml  setup.py
clean-folder/clean-folder/: clean.py  file_parser.py  normalize.py
clean-folder/clean_folder.egg-info/: PKG-INFO  SOURCES.txt
clean-folder/clean_folder_18042023.egg-info/: PKG-INFO  SOURCES.txt
