[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-folder-18042023"
version = "0.0.3dev"
authors = [
  { name="Kagev", email="Kagev@example.com" },
]
description = "Clean, parser and normolize folders package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
